--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "node ./node_modules/vite/bin/vite.js preview"
   },
   "dependencies": {
+    "element-plus": "^1.0.2-beta.70",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
